syntax = "proto3";

package log.v1;

option go_package = "github.com/nickstrad/api/log_v1";

service Log {
    rpc Append(AppendRequest) returns (AppendResponse) {}
    rpc Read(ReadRequest) returns (ReadResponse) {}
    rpc AppendStream(stream AppendRequest) returns (stream AppendResponse) {}
    rpc ReadStream(ReadRequest) returns (stream ReadResponse) {}
    rpc GetServers(GetServersRequest) returns (GetServersResponse) {}
}

 message AppendRequest {
    Record record = 1;
 }

 message AppendResponse {
    uint64 offset = 1;
 }

 message ReadRequest {
    uint64 offset = 1;
 }

 message  ReadResponse {
    Record record = 2;
 }

message Record {
    bytes value = 1;
    uint64 offset = 2;
    uint64 term = 3;
    uint32 type = 4;
}

message GetServersRequest {}

message GetServersResponse {
   repeated Server servers = 1;
}

message Server {
   string id = 1;
   string rpc_addr = 2;
   bool is_leader = 3;
}
